--- a/next-auth-as-a-service/next-auth/package.json
+++ b/next-auth-as-a-service/next-auth/package.json
@@ -16,7 +16,7 @@
 		"jwt-decode": "^4.0.0",
 		"lucide-react": "^0.469.0",
 		"next": "15.1.2",
-		"next-auth": "^4.24.11",
+		"next-auth": "^5.0.0-beta.25",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
 		"tailwind-merge": "^2.5.5",
